[gd_scene load_steps=4 format=3 uid="uid://5n1f8g00tkyd"]

[ext_resource type="Texture2D" uid="uid://c343mcd1shy5y" path="res://assets/backgrounds/menu_background.png" id="1_0wy5r"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_7u1bh"]
[ext_resource type="Texture2D" uid="uid://cs1mu1kegw7ew" path="res://assets/game_logo.png" id="3_qxi3j"]

[node name="Control" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0wy5r")
script = ExtResource("1_7u1bh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 318.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 100

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="LevelSelectButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "LEVEL SELECT"

[node name="ControlsButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "CONTROLS"

[node name="TruthTableButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "TRUTH TABLES"

[node name="CreditsButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[node name="ExitButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="GameLogo" type="Sprite2D" parent="."]
position = Vector2(968, 272)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_qxi3j")

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TruthTableButton" to="." method="_on_truth_table_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
